[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/pixil-frame-0.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58, 39.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 61, 35.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 54.5, 47 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 45, -28 )
collision_mask = 0
script = ExtResource( 2 )
speed = Vector2( 900, 1300 )

[node name="Pixil-frame-0" type="Sprite" parent="."]
position = Vector2( -16, 48 )
scale = Vector2( 0.0823435, 0.3425 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -11, -12.5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = -500
limit_right = 13000
limit_bottom = 1400
editor_draw_limits = true

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.282353, 0, 0.427451, 1 )
position = Vector2( -12, -9.5 )
shape = SubResource( 2 )

[node name="CrystalDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrystalDetection"]
position = Vector2( -9.5, -23 )
shape = SubResource( 3 )

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="CrystalDetection" to="." method="_on_CrystalDetection_area_entered"]
